atributos de acessibilidade

--- a/pt-br-version.html
+++ b/pt-br-version.html
@@ -7,10 +7,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Appslan - One Page App Landing Page">
+    <meta name="description" content="CTD - LIMITED | Delivering Innovations Around The World">
     <meta name="keywords"
-        content="Apps, Software, technology, landing page, business, responsive, onepage, corporate, clean">
-    <meta name="author" content="Coderspoint">
+        content="Software, technology, business, game">
+    <meta name="author" content="CTD - LIMITED">
+
+    <!-- OG de compartilhamento -->
+    <meta property="og:title" content="CTD - LIMITED" />
+    <meta property="og:image" content="./assets/img/logo.png" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
 
     <!-- Site title -->
     <title>CTD - LIMITED | Delivering Innovations Around The World</title>
@@ -58,12 +64,12 @@
                     <!-- Navigation starts -->
                     <div class="col-md-12">
                         <div class="mainmenu">
-                            <div class="navbar navbar-nobg">
+                            <div class="navbar navbar-expand-lg">
                                 <div class="navbar-header">
-                                    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""
-                                            class="img-logo"></a>
+                                    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="Logo da empresa"
+                                            class="img-logo" aria-label="Logo da empresa"></a>
                                     <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                        data-target=".navbar-collapse">
+                                        data-target=".navbar-collapse" aria-expanded="false" aria-controls="navbarContent">
                                         <span class="sr-only">Toggle navigation</span>
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
@@ -82,7 +88,8 @@
                                             <li><a class="smooth_scroll" href="#contact">CONTATO</a></li>
                                             <li>
                                                 <a href="./index.html" class="toggle-lang">
-                                                    <img src="assets/img/us-flag.png" alt="" height="25px">
+                                                    <img src="assets/img/us-flag.png" alt="Bandeira dos Estados Unidos"
+                                                        class="img-flag" height="25px" aria-label="Bandeira dos Estados Unidos">
                                                     EN
                                                 </a>
                                             </li>
@@ -96,33 +103,30 @@
                 </div>
             </div>
         </header>
+
         <!-- Navigation area ends -->
 
 
         <!-- Slider area starts -->
         <section id="slider" class="slider-area">
             <div class="slider-mask">
-                <div class="">
-                    <div class="">
-                        <div class="intro-text">
-                            <div class="container">
-                                <div class="row">
-                                    <!-- intro image -->
-                                    <div class="col-md-6 col-sm-12 intro-img">
-                                        <!-- <img src="assets/img/slider/devices-home-white.svg" alt=""> -->
-                                    </div>
-                                    <!-- intro text -->
-                                    <div class="col-md-6 col-sm-12">
-                                        <div class="intro-text-box clearfix">
-                                            <h1>CTD LIMITED</h1>
-                                            <p>ENTREGANDO INOVAÇÕES AO REDOR<br> DO MUNDO</p>
-                                        </div>
-                                    </div>
+                <div class="intro-text">
+                    <div class="container">
+                        <div class="row">
+                            <!-- intro image -->
+                            <div class="col-md-6 col-sm-12 intro-img">
+                                <!-- <img src="assets/img/slider/devices-home-white.svg" alt="Imagem ilustrativa"> -->
+                            </div>
+                            <!-- intro text -->
+                            <div class="col-md-6 col-sm-12">
+                                <div class="intro-text-box clearfix">
+                                    <h1>CTD LIMITED</h1>
+                                    <p>ENTREGANDO INOVAÇÕES AO REDOR<br> DO MUNDO</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>               
             </div>
         </section>
         <!-- Slider area ends -->
@@ -171,7 +175,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="feture-img">
-                                <img src="assets/img/feature/mobile-device.svg" alt="">
+                                <img loading="lazy" src="assets/img/feature/mobile-device.svg" alt="Imagem ilustrativa">
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -272,25 +276,25 @@
                 <div class="row fun-fact-area">
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom">
-                            <img src="assets/img/services/icon-migrations.png" alt="">
+                            <img loading="lazy" src="assets/img/services/icon-migrations.png" alt="Imagem ilustrativa">
                             <p>Migração de <br>plataforma</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom sm-no-border xs-no-border">
-                            <img src="assets/img/services/icon-features.png" alt="">
+                            <img loading="lazy" src="assets/img/services/icon-features.png" alt="Imagem ilustrativa">
                             <p>Adicionar novos recursos ao seu software/aplicativo</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact">
-                            <img src="assets/img/services/icon-database.png" alt="">
+                            <img loading="lazy" src="assets/img/services/icon-database.png" alt="Imagem ilustrativa">
                             <p>banco de dados <br>automatizado BKP</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact last">
-                            <img src="assets/img/services/icon-firewall.png" alt="">
+                            <img loading="lazy" src="assets/img/services/icon-firewall.png" alt="Imagem ilustrativa">
                             <p>Serviços de firewall com parceria especializada</p>
                         </div>
                     </div>
@@ -323,7 +327,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <img src="assets/img/choose/services.svg" alt="">
+                            <img loading="lazy" src="assets/img/choose/services.svg" alt="Imagem ilustrativa">
                         </div>
                         <div class="col-sm-8">
                             <div class="choose-box right">
@@ -337,7 +341,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 col-sm-push-8">
-                            <img src="assets/img/choose/tecnologies.svg" alt="">
+                            <img loading="lazy" src="assets/img/choose/tecnologies.svg" alt="Imagem ilustrativa">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
                             <div class="choose-box left">
@@ -373,10 +377,10 @@
                     <!-- Step 1 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img src="assets/img/steps/step-1.svg" alt="" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px">
                             Primeiro Contato
                         </h3>
-                        <img src="assets/img/steps/first-contact.svg" alt="" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/first-contact.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
                         <p class="text-center">
                             O contato pode ser feito por e-mail, skype, discord ou preenchendo o formulário de orçamento em
                             nosso site. Em
@@ -385,16 +389,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img src="assets/img/steps/arrow-down.svg" alt="" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
                     </div>
 
                     <!-- Step 2 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img src="assets/img/steps/step-2.svg" alt="" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px">
                             Entendimento
                         </h3>
-                        <img src="assets/img/steps/understanding.svg" alt="" class="img-step" height="200px">
+                        <img  loading="lazy" src="assets/img/steps/understanding.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
                         <p class="text-center">
                             Esta etapa é onde elaboramos um orçamento com base nas informações prestadas, recomenda-se uma
                             reunião
@@ -404,16 +408,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img src="assets/img/steps/arrow-down.svg" alt="" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
                     </div>
 
                     <!-- Step 3 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img src="assets/img/steps/step-3.svg" alt="" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px">
                             Iniciando o Projeto
                         </h3>
-                        <img src="assets/img/steps/start-the-project.svg" alt="" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/start-the-project.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
                         <p class="text-center">
                             Depois de definir o orçamento e passar por todo o planejamento do que será feito, um prazo
                             será passado para o
@@ -421,16 +425,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img src="assets/img/steps/arrow-down.svg" alt="" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
                     </div>
 
                     <!-- Step 4 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img src="assets/img/steps/step-4.svg" alt="" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px">
                             Finalização
                         </h3>
-                        <img src="assets/img/steps/finalization.svg" alt="" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
                         <p class="text-center">
                             Com o software ou projeto em mãos, realizamos os testes finais e instrução/adaptação dos
                             usuários com o software
@@ -439,16 +443,16 @@
                         </p>
                     </article>
                     <div class="next-step">
-                        <img src="assets/img/steps/arrow-down.svg" alt="" height="40px">
+                        <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px">
                     </div>
 
                     <!-- Step 5 -->
                     <article class="step-item">
                         <h3 class="step-title text-center">
-                            <img src="assets/img/steps/step-5.svg" alt="" height="30px">
+                            <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px">
                             Implementação
                         </h3>
-                        <img src="assets/img/steps/implementation.svg" alt="" class="img-step" height="200px">
+                        <img loading="lazy" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step" height="200px">
                         <p class="text-center">
                             Transição do software desenvolvido para uma versão operacional. Incluindo a preparação de um
                             ambiente de produção,
@@ -486,7 +490,7 @@
                                     <a href="#accordion01" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="true" class="">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">O que um consultor de TI faz pela minha empresa?</h4>
+                                        <h3 class="panel-title">O que um consultor de TI faz pela minha empresa?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion01" class="panel-collapse collapse in" role="tabpanel"
@@ -522,7 +526,7 @@
                                     <a href="#accordion02" class="collapsed" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="false">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">Quanto tempo leva para ficar pronto?</h4>
+                                        <h3 class="panel-title">Quanto tempo leva para ficar pronto?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion02" class="panel-collapse collapse" role="tabpanel" aria-expanded="false"
@@ -542,7 +546,7 @@
                                     <a href="#accordion03" class="collapsed" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="false">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">Quanto custa o investimento?</h4>
+                                        <h3 class="panel-title">Quanto custa o investimento?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion03" class="panel-collapse collapse" role="tabpanel" aria-expanded="false"
@@ -561,7 +565,7 @@
                                     <a href="#accordion04" class="collapsed" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="false">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">Quais tecnologias são usadas?</h4>
+                                        <h3 class="panel-title">Quais tecnologias são usadas?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion04" class="panel-collapse collapse" role="tabpanel" aria-expanded="false"
@@ -655,16 +659,16 @@
                             <ul class="social-links">
                                 <li>
                                     <a href="mailto:ctdunlimited@gmail.com?">
-                                        <img src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px">
                                     </a>
                                 </li>
                                 <li><a href="skype:live:.cid.ec6326698f92b3e9?chat">
-                                        <img src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="https://discord.com/channels/@me/1095717653068394519">
-                                        <img src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px">
+                                        <img loading="lazy" src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px">
                                     </a>
                                 </li>
                             </ul>
@@ -685,6 +689,18 @@
     </footer>
     <!-- Footer area ends -->
 
+
+    <!--Linguagem de sinais -> Libras  -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
 
 
     <!-- Latest jQuery -->
